[tool.poetry]
name = "dingII"
version = "0.0.1"
description = "Computing the Rearrangement Distance of Natural Genomes"
authors = ["Leonard Bohnenkämper <lbohnenk@cebitec.uni-bielefeld.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.ub.uni-bielefeld.de/gi/dingiiofficial"
repository = "https://gitlab.ub.uni-bielefeld.de/gi/dingiiofficial"
packages = [{include = "dingII"}]
keywords = []

[tool.poetry.scripts]
dingII = 'dingII.__main__:main'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
networkx = "^3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
